[gd_scene load_steps=19 format=2]

[ext_resource path="res://Cenas/Personagem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/Paredes/Parede5.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Paredes/Parede4.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/Paredes/Parede2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/Paredes/Parede7.tscn" type="PackedScene" id=6]
[ext_resource path="res://Cenas/Paredes/Parede6.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cenas/Armadilhas/PisoFino.tscn" type="PackedScene" id=8]
[ext_resource path="res://Cenas/Paredes/Parede3.tscn" type="PackedScene" id=9]
[ext_resource path="res://Cenas/Armadilhas/ParedeArmadilha.tscn" type="PackedScene" id=10]
[ext_resource path="res://Cenas/Inimigo.tscn" type="PackedScene" id=11]
[ext_resource path="res://Cenas/Portal.tscn" type="PackedScene" id=12]
[ext_resource path="res://Cenas/Paredes/Parede8.tscn" type="PackedScene" id=13]
[ext_resource path="res://Cenas/Roteiros/02.gd" type="Script" id=14]
[ext_resource path="res://Cenas/Ativador.tscn" type="PackedScene" id=15]
[ext_resource path="res://Cenas/PlanoDeFundo.tscn" type="PackedScene" id=16]
[ext_resource path="res://Cenas/MensagemArea.tscn" type="PackedScene" id=17]
[ext_resource path="res://Cenas/FundoPreto.tscn" type="PackedScene" id=18]

[node name="02" type="Node2D"]
script = ExtResource( 14 )

[node name="PlanoDeFundo" parent="." instance=ExtResource( 16 )]

[node name="Fundos" type="Node2D" parent="."]

[node name="FundoPreto" parent="Fundos" instance=ExtResource( 18 )]
position = Vector2( 224.5, 64.5 )
scale = Vector2( 4.1129, 3.08065 )

[node name="FundoPreto2" parent="Fundos" instance=ExtResource( 18 )]
position = Vector2( 736, 448.25 )
scale = Vector2( 4.12903, 7.21774 )

[node name="FundoPreto3" parent="Fundos" instance=ExtResource( 18 )]
position = Vector2( -240, 688.125 )
scale = Vector2( 6.70968, 2.57661 )

[node name="FundoPreto4" parent="Fundos" instance=ExtResource( 18 )]
position = Vector2( -248, 368 )
scale = Vector2( 6.96774, 1.54839 )

[node name="Paredes" type="Node2D" parent="."]

[node name="Parede4" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 64, 0 )

[node name="Parede21" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 64, -64 )

[node name="Parede6" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 64, 64 )

[node name="Parede7" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 64, 128 )

[node name="Parede29" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 576, 256 )

[node name="Parede30" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 576, 320 )

[node name="Parede32" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 576, 384 )

[node name="Parede33" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 576, 448 )

[node name="Parede35" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 576, 512 )

[node name="Parede36" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 576, 576 )

[node name="Parede37" parent="Paredes" instance=ExtResource( 3 )]
position = Vector2( 576, 640 )

[node name="Parede5" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( -64, 0 )

[node name="Parede22" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( -64, -64 )

[node name="Parede11" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( -64, 192 )

[node name="Parede26" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( 448, 384 )

[node name="Parede31" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( 448, 448 )

[node name="Parede38" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( 448, 512 )

[node name="Parede12" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( -64, 256 )

[node name="Parede47" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( 0, 640 )

[node name="Parede49" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( 0, 384 )

[node name="Parede8" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( -64, 64 )

[node name="Parede13" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( 128, 192 )

[node name="Parede14" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( 192, 192 )

[node name="Parede15" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( 256, 192 )

[node name="Parede20" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( 320, 192 )

[node name="Parede24" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( 384, 192 )

[node name="Parede57" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( -64, 448 )

[node name="Parede58" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( -128, 448 )

[node name="Parede59" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( -192, 448 )

[node name="Parede60" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( -256, 448 )

[node name="Parede61" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( -320, 448 )

[node name="Parede62" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( -384, 448 )

[node name="Parede63" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( -448, 448 )

[node name="Parede64" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( -512, 448 )

[node name="Parede27" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( 448, 192 )

[node name="Parede28" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( 512, 192 )

[node name="Parede23" parent="Paredes" instance=ExtResource( 6 )]
position = Vector2( 0, -64 )

[node name="Parede10" parent="Paredes" instance=ExtResource( 7 )]
position = Vector2( 64, 192 )

[node name="Parede9" parent="Paredes" instance=ExtResource( 2 )]
position = Vector2( -64, 128 )

[node name="Parede2" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 0, 320 )

[node name="Parede3" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 64, 320 )

[node name="Parede16" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 128, 320 )

[node name="Parede17" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 192, 320 )

[node name="Parede34" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 512, 704 )

[node name="Parede40" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 448, 704 )

[node name="Parede41" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 384, 704 )

[node name="Parede42" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 320, 704 )

[node name="Parede43" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 256, 704 )

[node name="Parede44" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 192, 704 )

[node name="Parede45" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 128, 704 )

[node name="Parede46" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 64, 704 )

[node name="Parede18" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 256, 320 )

[node name="Parede19" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 320, 320 )

[node name="Parede25" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( 384, 320 )

[node name="Parede48" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( -64, 576 )

[node name="Parede52" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( -128, 576 )

[node name="Parede53" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( -192, 576 )

[node name="Parede54" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( -256, 576 )

[node name="Parede55" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( -320, 576 )

[node name="Parede56" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( -384, 576 )

[node name="Parede65" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( -448, 576 )

[node name="Parede66" parent="Paredes" instance=ExtResource( 4 )]
position = Vector2( -512, 576 )

[node name="Parede50" parent="Paredes" instance=ExtResource( 9 )]
position = Vector2( 448, 320 )

[node name="Parede51" parent="Paredes" instance=ExtResource( 9 )]
position = Vector2( 0, 576 )

[node name="Parede39" parent="Paredes" instance=ExtResource( 13 )]
position = Vector2( 0, 448 )

[node name="Parede67" parent="Paredes" instance=ExtResource( 13 )]
position = Vector2( 448, 576 )

[node name="Cameras" type="Node2D" parent="."]

[node name="Camera" parent="Cameras" instance=ExtResource( 5 )]
position = Vector2( 128, 128 )
inicial = true

[node name="Camera2" parent="Cameras" instance=ExtResource( 5 )]
position = Vector2( 192, 512 )
inicial = true

[node name="Camera5" parent="Cameras" instance=ExtResource( 5 )]
position = Vector2( -224, 512 )
inicial = true

[node name="Camera3" parent="Cameras" instance=ExtResource( 5 )]
position = Vector2( 640, 384 )
inicial = true

[node name="Camera4" parent="Cameras" instance=ExtResource( 5 )]
position = Vector2( 640, 512 )
inicial = true

[node name="PisosFinos" type="Node2D" parent="."]

[node name="PisoFino" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( 64, 256 )

[node name="PisoFino2" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( 128, 256 )

[node name="PisoFino3" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( 192, 256 )

[node name="PisoFino4" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( 256, 256 )

[node name="PisoFino8" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( -64, 512 )

[node name="PisoFino5" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( 448, 640 )

[node name="PisoFino6" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( 384, 640 )

[node name="PisoFino7" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( 320, 640 )

[node name="PisoFino16" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( 192, 384 )

[node name="PisoFino17" parent="PisosFinos" instance=ExtResource( 8 )]
position = Vector2( 256, 384 )

[node name="Inimigo" parent="." instance=ExtResource( 11 )]
position = Vector2( -384, 512 )

[node name="Portal" parent="." instance=ExtResource( 12 )]
position = Vector2( -512, 512 )
caminho = "res://Cenas/01.tscn"

[node name="PosicaoInicial" type="Position2D" parent="."]
position = Vector2( 0, 32 )

[node name="ParedesQueDesaparecem" type="Node2D" parent="."]
position = Vector2( -192, 512 )

[node name="ParedeArmadilha" parent="ParedesQueDesaparecem" instance=ExtResource( 10 )]
position = Vector2( 576, 64 )

[node name="ParedeArmadilha2" parent="ParedesQueDesaparecem" instance=ExtResource( 10 )]
position = Vector2( 64, 0 )
ativo = false

[node name="Ativadores" type="Node2D" parent="."]

[node name="Ativador" parent="Ativadores" instance=ExtResource( 15 )]
position = Vector2( 384, 448 )
nome_objeto = "ParedesQueDesaparecem/ParedeArmadilha"

[node name="Ativador2" parent="Ativadores" instance=ExtResource( 15 )]
position = Vector2( -256, 512 )
nome_objeto = "ParedesQueDesaparecem/ParedeArmadilha2"

[node name="Personagem" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 32 )
direcao_inicial = 180
inverte = true

[node name="MensagemArea" parent="." instance=ExtResource( 17 )]
position = Vector2( 384, 512 )
mensagem = "Algumas paredes podem acabar sumindo..."
posicao_mensagem = Vector2( 128, 0 )

[node name="MensagemArea2" parent="." instance=ExtResource( 17 )]
position = Vector2( 320, 256 )
mensagem = "Cuidado com as armadilhas!"
posicao_mensagem = Vector2( 640, 256 )
[connection signal="estou_morto" from="Personagem" to="." method="_on_Personagem_estou_morto"]
